[package]
name = "prefetch"
version = "0.1.0"
edition = "2021"
authors = ["aiden2207"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Aiden2207/prefetch"
homepage = "https://github.com/Aiden2207/prefetch"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"